--- a/index.html
+++ b/index.html
@@ -185,31 +185,36 @@
 
 
     <div class="contetnt">
+
         <div class="basics">Basics
             <div class="basics-line"></div>
         </div>
         <div class="get-start">
-            <div class="inform-basics">
-                <div class="get-started-text"> Getting started</div>
-                <div class="get-introduced-to-th">
-                    Get introduced to the basic concepts of our editor, how to create
-                    projects and navigate between all
-                    the platform functionalities.
+            <div class="qw">
+                <div class="inform-basics">
+                    <div class="get-started-text"> Getting started</div>
+                    <div class="get-introduced-to-th">
+                        Get introduced to the basic concepts of our editor, how to create
+                        projects and navigate between all
+                        the platform functionalities.
+                    </div>
+
+                    <div class="rec"></div>
+
+                    <div class="three">5 authors, 13 entries</div>
                 </div>
-
-                <div class="rec"></div>
-
-                <div class="three">5 authors, 13 entries</div>
             </div>
+            <div class="qw">
 
-            <div class="inform-basics">
-                <div class="get-started-text">Account & Billing</div>
-                <div class="get-introduced-to-th">
-                    Guides on how to update, upgrade & manage your profile.
-                    You’ll find also more informations on teams and projects sharing.
+                <div class="inform-basics">
+                    <div class="get-started-text">Account & Billing</div>
+                    <div class="get-introduced-to-th">
+                        Guides on how to update, upgrade & manage your profile.
+                        You’ll find also more informations on teams and projects sharing.
+                    </div>
+                    <div class="rec"></div>
+                    <div class="three">3 authors, 3 entries</div>
                 </div>
-                <div class="rec"></div>
-                <div class="three">3 authors, 3 entries</div>
             </div>
         </div>
 
@@ -219,6 +224,7 @@
             </div>
             <div class="brows-all">Brows all</div>
         </div>
+
         <div class="get-start">
             <div class="inform-basics">
                 <div class="get-started-text">Sketch symbols</div>
@@ -255,11 +261,13 @@
                 <div class="three">3 authors, 3 entries</div>
             </div>
         </div>
+
         <div class="design1">
             <div class="design2">Development
                 <div class="basics-line"></div>
             </div>
         </div>
+
         <div class="get-start">
             <div class="inform-basics">
                 <div class="get-started-text">Frontend</div>
@@ -283,7 +291,6 @@
 
                 <div class="three">5 authors, 13 entries</div>
             </div>
-
             <div class="inform-basics">
                 <div class="get-started-text">Mobile</div>
                 <div class="get-introduced-to-th">
