--- a/index.html
+++ b/index.html
@@ -303,92 +303,91 @@
         </div>
     </div>
 
-    <!--    <div class="sign-up">-->
-    <!--        <div class="keep-up">Keep up with our updates</div>-->
-    <!--        <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em-->
-    <!--                class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>-->
-    <!--        </div>-->
+        <div class="sign-up">
+            <div class="keep-up">Keep up with our updates</div>
+            <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em
+                    class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>
+            </div>
 
-    <!--&lt;!&ndash;        <div class="email">&ndash;&gt;-->
+            <div class="email">
 
-    <!--&lt;!&ndash;            <div class="enter-you-email">&ndash;&gt;-->
-    <!--&lt;!&ndash;                Enter you email&ndash;&gt;-->
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+                <div class="enter-you-email">
+                    Enter you email
+                </div>
 
-    <!--&lt;!&ndash;            <div class="sign-up-button-wrapper">&ndash;&gt;-->
-    <!--&lt;!&ndash;                <input class="sign-up-button" type="button" value="SIGN UP">&ndash;&gt;-->
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;        </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;    <div class="rectangle-wrapper">&ndash;&gt;-->
-    <!--&lt;!&ndash;        <div class="rectangle">&ndash;&gt;-->
-    <!--&lt;!&ndash;            <div class="logo2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="webbly"> Webbly</div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="oval"></div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>&ndash;&gt;-->
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
+                <div class="sign-up-button-wrapper">
+                    <input class="sign-up-button" type="button" value="SIGN UP">
+                </div>
+            </div>
+        </div>
 
-    <!--&lt;!&ndash;            <div class="company">&ndash;&gt;-->
+        <div class="rectangle-wrapper">
+            <div class="rectangle">
+                <div class="logo2">
+                    <div class="webbly"> Webbly</div>
+                    <div class="oval"></div>
+                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
+                </div>
+                <div class="company">
+                    <div class="header-name">Company</div>
 
-    <!--&lt;!&ndash;                <div class="header-name">Company</div>&ndash;&gt;-->
+                    <div class="company-inform">
+                        <div class="articles2">
+                            About us
+                        </div>
+                        <div class="articles2">
+                            Blog
+                        </div>
+                        <div class="articles2">
+                            Contact
+                        </div>
+                        <div class="articles2">
+                          Work for us
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="header-name">Product</div>
 
-    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        About us&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Blog&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Contact&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Work for us&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;            <div class="product">&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="header-name">Product</div>&ndash;&gt;-->
+                    <div class="company-inform">
+                        <div class="articles2">
+                            Trial
+                        </div>
+                        <div class="articles2">
+                            Pricing
+                        </div>
+                        <div class="articles2">
+                            Teams
+                        </div>
+                    </div>
 
-    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Trial&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Pricing&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Teams&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
+                </div>
+                <div class="resources">
+                    <div class="header-name">Recources</div>
 
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;            <div class="resources">&ndash;&gt;-->
-    <!--&lt;!&ndash;                <div class="header-name">Recources</div>&ndash;&gt;-->
+                    <div class="company-inform">
+                        <div class="articles2">
+                            User guides
+                        </div>
+                        <div class="articles2">
+                            Support
+                        </div>
+                        <div class="articles2">
+                            Documentation
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-    <!--&lt;!&ndash;                <div class="company-inform">&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        User guides&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Support&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                    <div class="articles2">&ndash;&gt;-->
-    <!--&lt;!&ndash;                        Documentation&ndash;&gt;-->
-    <!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;                </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;            </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;        </div>&ndash;&gt;-->
-
-    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
-    <!--&lt;!&ndash;    <div class="footer">&ndash;&gt;-->
-    <!--&lt;!&ndash;        <div class="footer-webble">© 2019 Webble | A product by Piksl</div>&ndash;&gt;-->
-    <!--&lt;!&ndash;        <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>&ndash;&gt;-->
-    <!--&lt;!&ndash;    </div>&ndash;&gt;-->
-    <!--</div>-->
-    <!--</div>-->
-    <!--</div>-->
+        <div class="footer">
+            <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
+            <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
+        </div>
+    </div>
+    </div>
+    </div>
 </body>
 </html>
