--- a/index.html
+++ b/index.html
@@ -16,24 +16,19 @@
         </div>
         <div class="menu-wrapper">
             <div class="menu">
-                <div class="menu-ul">
                     <ul>
                         <li>Home</li>
                         <li id="doc">Documentation</li>
                         <li>Forum</li>
                         <li>Platform</li>
                     </ul>
-                </div>
-                <div class="form">
                     <form>
-                        <input class="button-signin" type="button" value="SIGN IN">
+                        <input class="button-sign-in" type="button" value="SIGN IN">
                     </form>
-                </div>
             </div>
         </div>
     </div>
     <div class="search">
-
         <div class="search-panel">
             <div class="header">
                 Knowledge Base
@@ -96,9 +91,7 @@
         </div>
     </div>
     <div class="full-inform">
-
         <div class="popular-art">
-
             <div class="head-article">Popular Articles</div>
 
             <div class="articles">
@@ -125,7 +118,6 @@
             </div>
 
         </div>
-
         <div class="latest-tutorials">
             <div class="head-article">
                 Latest Tutorials
@@ -182,13 +174,12 @@
 
         </div>
     </div>
-    <div class="contetnt">
-
+    <div class="content">
         <div class="basics">Basics
             <div class="basics-line"></div>
         </div>
         <div class="get-start">
-            <div class="qw">
+            <div class="card-inform">
                 <div class="inform-basics">
                     <div class="get-started-text"> Getting started</div>
                     <div class="get-introduced-to-th">
@@ -197,21 +188,21 @@
                         the platform functionalities.
                     </div>
 
-                    <div class="rec"></div>
+                    <div class="line"></div>
 
-                    <div class="three">5 authors, 13 entries</div>
+                    <div class="author-entries">5 authors, 13 entries</div>
                 </div>
             </div>
-            <div class="qw">
 
+            <div class="card-inform">
                 <div class="inform-basics">
                     <div class="get-started-text">Account & Billing</div>
                     <div class="get-introduced-to-th">
                         Guides on how to update, upgrade & manage your profile.
                         You’ll find also more informations on teams and projects sharing.
                     </div>
-                    <div class="rec"></div>
-                    <div class="three">3 authors, 3 entries</div>
+                    <div class="line"></div>
+                    <div class="author-entries">3 authors, 3 entries</div>
                 </div>
             </div>
         </div>
@@ -232,9 +223,9 @@
                     up to speed with Symbols overrides ..
                 </div>
 
-                <div class="rec"></div>
+                <div class="line"></div>
 
-                <div class="three">5 authors, 13 entries</div>
+                <div class="author-entries">5 authors, 13 entries</div>
             </div>
             <div class="inform-basics">
                 <div class="get-started-text">Design tools</div>
@@ -244,9 +235,9 @@
                     You'll learn what makes them different and how can you..
                 </div>
 
-                <div class="rec"></div>
+                <div class="line"></div>
 
-                <div class="three">5 authors, 13 entries</div>
+                <div class="author-entries">5 authors, 13 entries</div>
             </div>
             <div class="inform-basics">
                 <div class="get-started-text">User Experience</div>
@@ -255,8 +246,8 @@
                     and follow in these tutorials with the best
                     practices and patterns to produce world class apps
                 </div>
-                <div class="rec"></div>
-                <div class="three">3 authors, 3 entries</div>
+                <div class="line"></div>
+                <div class="author-entries">3 authors, 3 entries</div>
             </div>
         </div>
 
@@ -274,9 +265,9 @@
                     tutorials and guides.
                 </div>
 
-                <div class="rec"></div>
+                <div class="line"></div>
 
-                <div class="three">6 authors, 12 entries</div>
+                <div class="author-entries">6 authors, 12 entries</div>
             </div>
             <div class="inform-basics">
                 <div class="get-started-text">Backend</div>
@@ -285,9 +276,9 @@
                     ever need to create backend systems for you apps.
                 </div>
 
-                <div class="rec"></div>
+                <div class="line"></div>
 
-                <div class="three">5 authors, 13 entries</div>
+                <div class="author-entries">5 authors, 13 entries</div>
             </div>
             <div class="inform-basics">
                 <div class="get-started-text">Mobile</div>
@@ -295,8 +286,8 @@
                     Learn mobile technologies, we'll start with React Native and slowly move to native iOS and Android
                     development with Swift and ..
                 </div>
-                <div class="rec"></div>
-                <div class="three">2 authors, 19 entries</div>
+                <div class="line"></div>
+                <div class="author-entries">2 authors, 19 entries</div>
             </div>
         </div>
     </div>
