--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
         </div>
         <div class="menu-wrapper">
             <div class="menu">
-                    <ul>
-                        <li>Home</li>
-                        <li id="doc">Documentation</li>
-                        <li>Forum</li>
-                        <li>Platform</li>
-                    </ul>
-                    <form>
-                        <input class="button-sign-in" type="button" value="SIGN IN">
-                    </form>
+                <ul>
+                    <li>Home</li>
+                    <li id="doc">Documentation</li>
+                    <li>Forum</li>
+                    <li>Platform</li>
+                </ul>
+                <form>
+                    <input class="sign-in-button" type="button" value="SIGN IN">
+                </form>
             </div>
         </div>
     </div>
@@ -41,45 +41,44 @@
 
             <div class="search-form">
                 <input class="search-input" type="search" placeholder="search...">
-                <div class="ii"><i class="fas fa-search"></i></div>
+                <div class="search-icon"><i class="fas fa-search"></i></div>
             </div>
             <div class="search-info">Popular searches: <span>flexbox, landing, opacity, higlight</span></div>
         </div>
 
         <div class="cards">
             <div class="card">
-                <div class="reso-icon">
+                <div class="resources-icon">
                     <i class="fas fa-adjust"></i>
                 </div>
-                <div class="reso-head">Resources</div>
+                <div class="resources-head">Resources</div>
                 <div class="check-free-reso">Check our free resources s design
                     tokens for your next projects
                 </div>
             </div>
 
             <div class="card">
-                <div class="reso-icon">
-                    <!--                    <i class="fas fa-adjust"></i>-->
+                <div class="resources-icon">
                     <i class="fas fa-baseball-ball"></i>
                 </div>
-                <div class="reso-head">Contact us</div>
+                <div class="resources-head">Contact us</div>
                 <div class="check-free-reso">Contact our support
                     team. We’ll do everything to help you.
                 </div>
             </div>
 
             <div class="card">
-                <div class="reso-icon">
+                <div class="resources-icon">
                     <i class="fas fa-at"></i>
-                    <!--                    <i class="fas fa-adjust"></i>-->
                 </div>
-                <div class="reso-head">Forums</div>
+                <div class="resources-head">Forums</div>
                 <div class="check-free-reso">Join a community of
                     thousands of customers just like you.
                 </div>
             </div>
         </div>
     </div>
+
     <div class="update">
         <div class="update-wrapper">
             <div class="We-have-updated-our">
@@ -90,6 +89,7 @@
             </div>
         </div>
     </div>
+
     <div class="full-inform">
         <div class="popular-art">
             <div class="head-article">Popular Articles</div>
@@ -149,7 +149,7 @@
             </div>
 
         </div>
-        <div class="form-our-forms">
+        <div class="from-our-forums">
             <div class="head-article">From our Forums</div>
 
             <div class="articles">
@@ -178,7 +178,7 @@
         <div class="basics">Basics
             <div class="basics-line"></div>
         </div>
-        <div class="get-start">
+        <div class="card-inform-list">
             <div class="card-inform">
                 <div class="inform-basics">
                     <div class="get-started-text"> Getting started</div>
@@ -194,7 +194,7 @@
                 </div>
             </div>
 
-            <div class="card-inform">
+            <div class="inform-card">
                 <div class="inform-basics">
                     <div class="get-started-text">Account & Billing</div>
                     <div class="get-introduced-to-th">
@@ -207,14 +207,14 @@
             </div>
         </div>
 
-        <div class="design1">
-            <div class="design2">Design
+        <div class="design">
+            <div class="header-text-design">Design
                 <div class="basics-line"></div>
             </div>
-            <div class="brows-all">Brows all</div>
+            <div class="browse-all">Brows all</div>
         </div>
 
-        <div class="get-start">
+        <div class="card-inform-list">
             <div class="inform-basics">
                 <div class="get-started-text">Sketch symbols</div>
                 <div class="get-introduced-to-th">
@@ -251,13 +251,13 @@
             </div>
         </div>
 
-        <div class="design1">
-            <div class="design2">Development
+        <div class="design">
+            <div class="header-text-design">Development
                 <div class="basics-line"></div>
             </div>
         </div>
 
-        <div class="get-start">
+        <div class="card-inform-list">
             <div class="inform-basics">
                 <div class="get-started-text">Frontend</div>
                 <div class="get-introduced-to-th">Learn frontend development tools and
@@ -283,7 +283,8 @@
             <div class="inform-basics">
                 <div class="get-started-text">Mobile</div>
                 <div class="get-introduced-to-th">
-                    Learn mobile technologies, we'll start with React Native and slowly move to native iOS and Android
+                    Learn mobile technologies, we'll start with React Native and slowly move to native iOS and
+                    Android
                     development with Swift and ..
                 </div>
                 <div class="line"></div>
@@ -291,87 +292,88 @@
             </div>
         </div>
     </div>
-        <div class="sign-up">
-            <div class="keep-up">Keep up with our updates</div>
-            <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em
-                    class="design">design</em>, <em class="coding">coding</em> and <em class="marketing">marketing</em>
-            </div>
-
-            <div class="email">
-
-                <div class="enter-you-email">
-                    Enter you email
-                </div>
-
-                <div class="sign-up-button-wrapper">
-                    <input class="sign-up-button" type="button" value="SIGN UP">
-                </div>
-            </div>
+    <div class="sign-up">
+        <div class="keep-up">Keep up with our updates</div>
+        <div class="join-our">Join our weekly newsletter and get world class tutorials and articles<br> on <em
+                class="text-color">design</em>, <em class="coding">coding</em> and <em
+                class="marketing">marketing</em>
         </div>
-        <div class="rectangle-wrapper">
-            <div class="rectangle">
-                <div class="logo2">
-                    <div class="webbly"> Webbly</div>
-                    <div class="oval"></div>
-                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-                    <div class="icon-i-w"><i class="far fa-caret-square-down"></i></div>
-                </div>
-                <div class="company">
-                    <div class="header-name">Company</div>
 
-                    <div class="company-inform">
-                        <div class="articles2">
-                            About us
-                        </div>
-                        <div class="articles2">
-                            Blog
-                        </div>
-                        <div class="articles2">
-                            Contact
-                        </div>
-                        <div class="articles2">
-                          Work for us
-                        </div>
-                    </div>
-                </div>
-                <div class="product">
-                    <div class="header-name">Product</div>
+        <div class="email">
 
-                    <div class="company-inform">
-                        <div class="articles2">
-                            Trial
-                        </div>
-                        <div class="articles2">
-                            Pricing
-                        </div>
-                        <div class="articles2">
-                            Teams
-                        </div>
-                    </div>
-
-                </div>
-                <div class="resources">
-                    <div class="header-name">Recources</div>
-
-                    <div class="company-inform">
-                        <div class="articles2">
-                            User guides
-                        </div>
-                        <div class="articles2">
-                            Support
-                        </div>
-                        <div class="articles2">
-                            Documentation
-                        </div>
-                    </div>
-                </div>
+            <div class="enter-you-email">
+                Enter you email
             </div>
-        </div>
-        <div class="footer">
-            <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
-            <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
+
+            <div class="sign-up-button-wrapper">
+                <input class="sign-up-button" type="button" value="SIGN UP">
+            </div>
         </div>
     </div>
+    <div class="rectangle-wrapper">
+        <div class="rectangle">
+            <div class="logo2">
+                <div class="webbly"> Webbly</div>
+                <div class="oval"></div>
+                <div class="social-media-icon"><i class="far fa-caret-square-down"></i></div>
+                <div class="social-media-icon"><i class="far fa-caret-square-down"></i></div>
+                <div class="social-media-icon"><i class="far fa-caret-square-down"></i></div>
+            </div>
+            <div class="company">
+                <div class="header-name">Company</div>
+
+                <div class="company-inform">
+                    <div class="company-info-list-item">
+                        About us
+                    </div>
+                    <div class="company-info-list-item">
+                        Blog
+                    </div>
+                    <div class="company-info-list-item">
+                        Contact
+                    </div>
+                    <div class="company-info-list-item">
+                        Work for us
+                    </div>
+                </div>
+            </div>
+            <div class="product">
+                <div class="header-name">Product</div>
+
+                <div class="company-inform">
+                    <div class="company-info-list-item">
+                        Trial
+                    </div>
+                    <div class="company-info-list-item">
+                        Pricing
+                    </div>
+                    <div class="company-info-list-item">
+                        Teams
+                    </div>
+                </div>
+
+            </div>
+            <div class="resources">
+                <div class="header-name">Recources</div>
+
+                <div class="company-inform">
+                    <div class="company-info-list-item">
+                        User guides
+                    </div>
+                    <div class="company-info-list-item">
+                        Support
+                    </div>
+                    <div class="company-info-list-item">
+                        Documentation
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="footer">
+        <div class="footer-webble">© 2019 Webble | A product by Piksl</div>
+        <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
+    </div>
+</div>
 </body>
 </html>
