--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/494839bf8a.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><3</title>
 </head>
@@ -39,18 +38,11 @@
                 the most out of our product, quickly and effectively!
             </div>
 
-            <div class="search-form">
-                <input class="search-input" type="search" placeholder="search...">
-                <div class="search-icon"><i class="fas fa-search"></i></div>
-            </div>
             <div class="search-info">Popular searches: <span>flexbox, landing, opacity, higlight</span></div>
         </div>
 
         <div class="cards">
             <div class="card">
-                <div class="resources-icon">
-                    <i class="fas fa-adjust"></i>
-                </div>
                 <div class="resources-head">Resources</div>
                 <div class="check-free-reso">Check our free resources s design
                     tokens for your next projects
@@ -58,9 +50,6 @@
             </div>
 
             <div class="card">
-                <div class="resources-icon">
-                    <i class="fas fa-baseball-ball"></i>
-                </div>
                 <div class="resources-head">Contact us</div>
                 <div class="check-free-reso">Contact our support
                     team. We’ll do everything to help you.
@@ -68,9 +57,6 @@
             </div>
 
             <div class="card">
-                <div class="resources-icon">
-                    <i class="fas fa-at"></i>
-                </div>
                 <div class="resources-head">Forums</div>
                 <div class="check-free-reso">Join a community of
                     thousands of customers just like you.
@@ -153,23 +139,23 @@
             <div class="head-article">From our Forums</div>
 
             <div class="articles">
-                <i class="far fa-comment"></i> How to set up custom dns? by:<a href="#"> James Gordon</a>
+                How to set up custom dns?
             </div>
 
             <div class="articles">
-                <i class="far fa-comment"></i> Check out my latest creation :D by:<a href="#"> Neville Griff</a>
+                Check out my latest creation
             </div>
 
             <div class="articles">
-                <i class="far fa-comment"></i> Is Webble down for you guys? by:<a href="#"> Neville Griff</a>
+                Is Webble down for you guys?
             </div>
 
             <div class="articles">
-                <i class="far fa-comment"></i> Welcome to the new website! by:<a href="#"> Daya Chitan</a>
+                Welcome to the new website!
             </div>
 
             <div class="articles">
-                <i class="far fa-comment"></i> How can i add icons to my build? by:<a href="#"> Diane La..</a>
+                How can i add icons to my build?
             </div>
 
         </div>
