--- a/index.html
+++ b/index.html
@@ -361,5 +361,5 @@
         <div class="footer-term">Terms & Conditions ✦ Privacy Policy</div>
     </div>
 </div>
-</body>
+<script type="text/javascript" src="bundle.js"></script></body>
 </html>
